# parcial2_programacion2

./: Parcial_2.md  README.md  pruebas.json  pyproject.toml
src/taskflow/: __init__.py  db_test.py  forms.py  models.py  run.py  verify_db.py
src/taskflow/static/: styles.css
src/taskflow/templates/: base_template.html  index.html  login_form.html  signup_form.html  task_view.html
src/taskflow/templates/admin/: task_form.html
